# salesagent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SalesAgent.json  pyproject.toml
.codex/: config.toml
.codex/skills/wabog-sales-e2e-playground/: SKILL.md
docs/: agent_behavior.md  outbound_campaigns.md
fixtures/: kapso_webhook.json
scripts/: google_calendar_oauth.py
src/sales_agent/: __init__.py  main.py  outbound_cli.py
src/sales_agent/adapters/: channel.py  crm_memory.py  crm_notion.py  google_calendar.py  memory_sql.py  whatsapp.py
src/sales_agent/api/: app.py  routes.py
src/sales_agent/core/: config.py  db.py
src/sales_agent/domain/: interfaces.py  models.py  phones.py  state.py
src/sales_agent/graph/: workflow.py
src/sales_agent/prompts/: business_rules.md  core_agent.md  media_image_prompt.md  wabog_company.md  wabog_faq.md  wabog_integrations.md  wabog_pricing.md
src/sales_agent/services/: application.py  calendar_sync.py  inbound_processor.py  lead_scope.py  media_preprocessor.py  name_validation.py  outbound_campaigns.py  planner.py  policy.py  prompt_library.py  prompt_store.py
tests/: test_api.py  test_application.py  test_calendar_sync.py  test_channel.py  test_crm_memory.py  test_crm_notion.py  test_db.py  test_google_calendar.py  test_live_integrations.py  test_meeting_parser_regression.py  test_name_validation.py  test_outbound_campaigns.py  test_phone_numbers.py  test_planner.py  test_whatsapp.py  test_workflow.py
