[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sales-agent"
version = "0.1.0"
description = "WhatsApp-first sales agent with LangGraph orchestration and pluggable CRM adapters."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.50",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sales_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
  "integration: live integration tests against external providers",
]
